# sayonara-player

./: .gitignore  .gitlab-ci.yml  CHANGES  CMakeLists.txt  CMakePresets.json  Dockerfile  INSTALL.md  LICENSE  MANUAL  README.md  README.txt
resources/: CMakeLists.txt  DBMacros.h.in  Database.qrc  Resources.qrc  com.sayonara-player.Sayonara.appdata.xml.in  com.sayonara-player.Sayonara.desktop  player.db  sayonara-ctl.1.man.in  sayonara-query.1.man.in  sayonara.1.man.in  sayonara.appdata.xml  sayonara.menu.in  soundcloud.db  version.in
src/Application/: Application.cpp  Application.h  CMakeLists.txt  InstanceChecker.cpp  InstanceChecker.h  InstanceThread.cpp  InstanceThread.h  LibraryWatcher.cpp  LibraryWatcher.h  LocalLibraryObserver.cpp  LocalLibraryObserver.h  LocalLibraryWatcher.cpp  LocalLibraryWatcher.h  MetaTypeRegistry.cpp  MetaTypeRegistry.h
src/Components/: CMakeLists.txt
src/DBus/: CMakeLists.txt  DBusAdaptor.cpp  DBusAdaptor.h  DBusHandler.cpp  DBusHandler.h  DBusMPRIS.cpp  DBusMPRIS.h  DBusMediaKeysInterface.cpp  DBusMediaKeysInterface.h  DBusMediaKeysInterfaceGnome.cpp  DBusMediaKeysInterfaceGnome.h  DBusMediaKeysInterfaceMate.cpp  DBusMediaKeysInterfaceMate.h  DBusNotifications.cpp  DBusNotifications.h  DBusSessionManager.cpp  DBusSessionManager.h  readme.md  sayonara-ctl  sayonara-query
src/Database/: AbstractDatabase.cpp  AbstractDatabase.h  Albums.cpp  Albums.h  Artists.cpp  Artists.h  Base.cpp  Base.h  Bookmarks.cpp  Bookmarks.h  CMakeLists.txt  Connector.cpp  Connector.h  ConnectorProvider.cpp  ConnectorProvider.h  CoverConnector.cpp  CoverConnector.h  DatabaseAlbums.cpp  DatabaseAlbums.h  DatabaseArtists.cpp  DatabaseArtists.h  DatabaseBookmarks.cpp  DatabaseBookmarks.h  DatabaseConnector.cpp  DatabaseConnector.h  DatabaseLibrary.cpp  DatabaseLibrary.h  DatabaseModule.cpp  DatabasePlaylist.cpp  DatabasePlaylist.h  DatabasePodcasts.cpp  DatabasePodcasts.h  DatabaseSearchMode.cpp  DatabaseSearchMode.h  DatabaseSettings.cpp  DatabaseSettings.h  DatabaseStreams.cpp  DatabaseStreams.h  DatabaseTracks.cpp  DatabaseTracks.h  (+42 more)
src/GUI/: CMakeLists.txt
src/Gui/: CMakeLists.txt
src/Languages/: CMakeLists.txt  sayonara_lang.ts.template  sayonara_lang_ar_SA.ts  sayonara_lang_br.ts  sayonara_lang_ca.ts  sayonara_lang_cs.ts  sayonara_lang_cs_CZ.ts  sayonara_lang_de.ts  sayonara_lang_de_DE.ts  sayonara_lang_el.ts  sayonara_lang_en.ts  sayonara_lang_en_GB.ts  sayonara_lang_en_US.ts  sayonara_lang_es.ts  sayonara_lang_es_ES.ts  sayonara_lang_fi_FI.ts  sayonara_lang_fr.ts  sayonara_lang_fr_FR.ts  sayonara_lang_hu.ts  sayonara_lang_hu_HU.ts  sayonara_lang_id_ID.ts  sayonara_lang_it.ts  sayonara_lang_it_IT.ts  sayonara_lang_ja_JP.ts  sayonara_lang_nl.ts  sayonara_lang_nl_NL.ts  sayonara_lang_pl.ts  sayonara_lang_pl_PL.ts  sayonara_lang_pt.ts  sayonara_lang_pt_BR.ts  sayonara_lang_pt_PT.ts  sayonara_lang_ro.ts  sayonara_lang_ro_RO.ts  sayonara_lang_ru.ts  sayonara_lang_ru_RU.ts  sayonara_lang_sk_SK.ts  sayonara_lang_tr.ts  sayonara_lang_tr_TR.ts  sayonara_lang_uk.ts  sayonara_lang_uk_UA.ts  (+2 more)
src/Utils/: Algorithm.h  ArchiveExtractor.cpp  ArchiveExtractor.h  CMakeLists.txt  CoverUtils.cpp  CoverUtils.h  Crypt.cpp  Crypt.h  DirectoryReader.cpp  DirectoryReader.h  EqualizerPresets.cpp  EqualizerPresets.h  EqualizerSetting.cpp  EqualizerSetting.h  ExtensionSet.cpp  ExtensionSet.h  FileSystem.cpp  FileSystem.h  FileUtils.cpp  FileUtils.h  Filepath.cpp  Filepath.h  Image.cpp  Image.h  Language.cpp  Language.h  LanguageUtils.cpp  LanguageUtils.h  MeasureApp.cpp  MeasureApp.h  Mutex.h  Pimpl.h  RandomGenerator.cpp  RandomGenerator.h  Ranges.h  RawShortcutMap.cpp  RawShortcutMap.h  Set.cpp  Set.h  SetFwd.h  (+9 more)
test/: CMakeLists.txt  NewTest.cmake  PlayManagerMock.h  PlaylistMocks.h  SayonaraTest.cpp  SayonaraTest.h  TestPlayManager.h  TreeTest.cpp  createTest.sh  databaseinitializer.h  new_test.cmake
test/AudioConverter/: AudioConverterTest.cpp
test/Bookmarks/: BookmarkStorageTest.cpp
test/Common/: DatabaseUtils.cpp  DatabaseUtils.h  DirectoryReaderMock.cpp  DirectoryReaderMock.h  FileSystemMock.cpp  FileSystemMock.h  FileSystemMockTest.cpp  FileSystemTest.cpp  LibraryDatabaseProvider.cpp  LibraryDatabaseProvider.h  LibraryDatabaseProviderTest.cpp  PlayManagerMock.h  PlaylistMocks.h  SayonaraTest.cpp  SayonaraTest.h  TagReaderMock.cpp  TagReaderMock.h  TaggingMocks.cpp  TaggingMocks.h  TestTracks.cpp  TestTracks.h  TestWebClientFactory.h
test/Covers/: AudioscrobblerTest.cpp  CoverFetchManagerTest.cpp  CoverLocationTest.cpp
test/Database/: AlbumTest.cpp  ArtistTest.cpp  BasicQueryTest.cpp  LibraryDatabaseTest.cpp  PlaylistDatabaseTest.cpp  PodcastTest.cpp  TestTracks.cpp  TestTracks.h  TracksTest.cpp
test/DynamicPlayback/: ArtistMatchTest.cpp  DynamicPlaybackHandlerTest.cpp  LfmSimilarArtistFetcherTest.cpp  LfmSimilarArtistParserTest.cpp
test/Engine/: BroadcastTest.cpp  CallbackTest.cpp  EngineUtilsTest.cpp
test/Equalizer/: EqualizerTest.cpp
test/Helper/: MetaDataListTest.cpp  SettingsTest.cpp
test/History/: HistoryTest.cpp
test/LibraryManagement/: LibraryPluginHandlerTest.cpp
test/Lyrics/: LyricsLogicTest.cpp
test/PlayManager/: PlayManagerTest.cpp
test/Playlist/: ExternTracksPlaylistGeneratorTest.cpp  LibraryPlaylistInteractorTest.cpp  LocalPathPlaylistCreatorTest.cpp  LocalPathProcessorTest.cpp  PlaylistDbInterfaceTest.cpp  PlaylistFileTest.cpp  PlaylistFromPathCreatorTest.cpp  PlaylistHandlerTest.cpp  PlaylistLoaderTest.cpp  PlaylistShuffleTest.cpp  PlaylistTest.cpp  PlaylistTestUtils.cpp  PlaylistTestUtils.h  PlaylistTrackModifyTest.cpp  RepeatTest.cpp
test/Settings/: SettingConverterTest.cpp  SettingsNotifierTest.cpp
test/Shortcuts/: ShortcutIdentifierTest.cpp
test/SmartPlaylists/: ConverterTest.cpp  ListeningDateTest.cpp  SmartPlaylistManagerTest.cpp
test/StreamRecorder/: StreamRecorderTest.cpp  StreamRecorderUtilsTest.cpp
test/Streaming/: RadioBrowserParserTest.cpp  RadioStationParserTest.cpp  StreamHandlerTest.cpp
test/Tagging/: AbstractTaggingTest.cpp  AbstractTaggingTest.h  AlbumArtistTest.cpp  CoverEditTest.cpp  CoverTest.cpp  (+6 more)
(+1560 files in other folders)
