set(CMAKE_AUTOUIC ON)

add_subdirectory(Covers)
add_subdirectory(Directories)
add_subdirectory(ImportDialog)
add_subdirectory(InfoDialog)
add_subdirectory(Library)
add_subdirectory(Player)
add_subdirectory(Playlist)
add_subdirectory(Preferences)
add_subdirectory(Plugins)
add_subdirectory(Resources)
add_subdirectory(Shutdown)
add_subdirectory(SomaFM)
add_subdirectory(Soundcloud)
add_subdirectory(Tagging)
add_subdirectory(Utils)
